fix: ES module compatibility and consolidate test suite
- Add __dirname definition for ES modules using import.meta.url
- Fix test suite arithmetic operations that caused early exit with set -e
- Consolidate multiple test scripts into single comprehensive test suite
- All 17 tests now pass successfully
- Update npm test script to use unified test suite

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./scripts/test-suite.sh",
     "start:puppeteer-mcp": "tsx src/start-puppeteer-mcp.ts",
     "start:cdp-mcp": "tsx src/start-devtools-mcp.ts",
     "serve:test-app": "npx http-server test-app -p 8888",
