--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "babayaga",
-  "version": "1.0.0",
-  "description": "An agentic web testing framework combining Puppeteer and Chrome DevTools Protocol through MCP",
-  "main": "index.js",
+  "name": "babayaga-unified",
+  "version": "2.0.0",
+  "description": "Unified browser automation framework with MCP integration",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/banditburai/babayaga.git"
@@ -11,18 +12,12 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "test": "./scripts/test-suite.sh",
-    "start:puppeteer-mcp": "tsx src/start-puppeteer-mcp.ts",
-    "start:cdp-mcp": "tsx src/start-devtools-mcp.ts",
-    "serve:test-app": "npx http-server test-app -p 8888",
-    "dev": "npm-run-all --parallel serve:test-app start:*",
-    "start": "node scripts/start-all.js",
-    "test:servers": "tsx src/test-servers.ts",
-    "test:e2e": "node scripts/test-e2e.js",
-    "chrome": "node scripts/start-chrome.js",
-    "setup": "node scripts/setup.js",
-    "visual-regression": "tsx src/babayaga-server/tools/builtin/visual-regression.ts",
-    "start:babayaga": "tsx src/babayaga-server/index.ts"
+    "build": "tsc",
+    "start": "tsx src/index.ts",
+    "dev": "tsx watch src/index.ts",
+    "test": "jest",
+    "lint": "eslint src/**/*.ts",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "mcp",
@@ -51,15 +46,10 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.1",
-    "@types/express": "^5.0.2",
-    "@types/ws": "^8.18.1",
-    "chrome-remote-interface": "^0.33.3",
-    "devtools-mcp": "github:banditburai/devtools-mcp",
-    "express": "^5.1.0",
+    "puppeteer": "^24.10.0"
+  },
+  "optionalDependencies": {
     "pixelmatch": "^5.3.0",
-    "pngjs": "^7.0.0",
-    "puppeteer": "^24.10.0",
-    "puppeteer-mcp-server": "^0.7.2",
-    "ws": "^8.18.2"
+    "pngjs": "^7.0.0"
   }
 }
