refactor: complete transition to unified architecture
- Remove old multi-server architecture files
- Update all documentation for unified server
- Implement smart screenshot tool with MCP token handling
- Clean up scripts and remove outdated ones
- Organize examples into standalone-app
- Update package.json name to 'babayaga'
- Move test files to tests directory
- Update .gitignore for worktrees

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babayaga-unified",
+  "name": "babayaga",
   "version": "2.0.0",
   "description": "Unified browser automation framework with MCP integration",
   "main": "dist/index.js",
