chore: adopt standard MCP server conventions
- Use 'build/' directory instead of 'dist/'
- Add 'prepare' script to auto-build on install
- Add 'bin' field for CLI usage
- Add 'files' field to control package contents
- Update documentation to reflect build path changes
- Follow MCP TypeScript SDK conventions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "lib": ["ES2022", "DOM"],
-    "outDir": "./dist",
+    "outDir": "./build",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
