--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "babayaga",
   "version": "2.0.0",
   "description": "Unified browser automation framework with MCP integration",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "bin": {
+    "babayaga": "build/index.js"
+  },
+  "files": [
+    "build",
+    "test-app"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/banditburai/babayaga.git"
@@ -12,7 +19,8 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && chmod +x build/index.js",
+    "prepare": "npm run build",
     "start": "tsx src/index.ts",
     "dev": "tsx watch src/index.ts",
     "test": "jest",
