--- a/package.json
+++ b/package.json
@@ -1,63 +1,11 @@
 {
-  "name": "babayaga",
-  "version": "2.0.0",
-  "description": "Unified browser automation framework with MCP integration",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
-  "bin": {
-    "babayaga": "build/index.js"
-  },
-  "files": [
-    "build",
-    "test-app"
+  "private": true,
+  "workspaces": [
+    "shared",
+    "babayaga-qe",
+    "babayaga-honeypot"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/banditburai/babayaga.git"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "scripts": {
-    "build": "tsc && chmod +x build/index.js",
-    "prepare": "npm run build",
-    "start": "tsx src/index.ts",
-    "dev": "tsx watch src/index.ts",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "typecheck": "tsc --noEmit"
-  },
-  "keywords": [
-    "mcp",
-    "model-context-protocol",
-    "puppeteer",
-    "chrome-devtools-protocol",
-    "cdp",
-    "browser-automation",
-    "web-testing",
-    "ai-testing",
-    "claude",
-    "typescript"
-  ],
-  "author": "",
-  "license": "MIT",
-  "type": "module",
-  "devDependencies": {
-    "@types/node": "^22.15.29",
-    "@types/pixelmatch": "^5.2.4",
-    "@types/pngjs": "^6.0.3",
-    "eslint": "^9.28.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.5.3",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
-  },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.1",
-    "puppeteer": "^24.10.0"
-  },
-  "optionalDependencies": {
-    "pixelmatch": "^5.3.0",
-    "pngjs": "^7.0.0"
+    "@anthropic-ai/claude-code": "^1.0.16"
   }
 }
